--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,10 @@
 
     "author": "Nghiacangao_btteam",
     "background": {
-        "scripts": ["background.js"],
+        "scripts": [
+            "/js/core.js",
+            "background.js"
+        ],
         "persistent": false
     },
     "content_scripts": [{
@@ -31,13 +34,17 @@
             "https://www.messenger.com/t/*",
             "https://www.facebook.com/messages/t/*"
         ],
-        "js": ["content.js"],
+        "js": [
+            "content.js",
+            "/js/core.js"
+        ],
         "css": ["/css/contentCss/contentCss.css"],
         "all_frames": true
     }],
     "permissions": [
         "tabs",
         "storage",
-        "contextMenus"
+        "contextMenus",
+        "notifications"
     ]
 }
