--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,32 @@
 {
     "manifest_version": 2,
     "name": "Change Messenger's Theme",
-    "version": "2.1.3",
+    "version": "2.2.0",
 
-    "description": "A small tool changing the messenger's background",
+    "description": "A small tool changing facebook messenger's background",
     "icons": {
-        "16": "icon.png",
-        "48": "icon.png",
-        "128": "icon.png"
+        "16": "/assets/image/icon.png",
+        "32": "/assets/image/icon.png",
+        "124": "/assets/image/icon.png"
     },
 
     "browser_action": {
         "default_icon": {
-            "16": "icon.png",
-            "48": "icon.png",
-            "32": "icon.png"
+            "16": "/assets/image/icon.png",
+            "32": "/assets/image/icon.png",
+            "24": "/assets/image/icon.png"
         },
-        "default_title": "Messenger's Background tool",
-        "default_popup": "index.html"
+        "default_title": "Change messenger's appearance now",
+        "default_popup": "/popup/index.html"
     },
 
 
     "author": "Nghiacangao_btteam",
     "background": {
         "scripts": [
-            "/js/core.js",
-            "background.js"
+            "/js/lib/myLib.js",
+            "/js/core/core.js",
+            "/js/runtime/background.js"
         ],
         "persistent": false
     },
@@ -35,10 +36,10 @@
             "https://www.facebook.com/messages/t/*"
         ],
         "js": [
-            "content.js",
-            "/js/core.js"
+            "/js/runtime/content.js",
+            "/js/core/core.js"
         ],
-        "css": ["/css/contentCss/contentCss.css"],
+        "css": ["/css/content/content.css"],
         "all_frames": true
     }],
     "permissions": [
